--- a/index.html
+++ b/index.html
@@ -8,47 +8,98 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+
   <style>
-    :root{
-      --bg:#fbfbfb; --card:#fff; --muted:#6b6b70;
-      --accent:#2b7a78; --accent-dark:#225e5d;
-      --radius:12px; --shadow:0 6px 18px rgba(18,22,23,0.06);
+    :root {
+      --bg:#fbfbfb;
+      --card:#fff;
+      --muted:#6b6b70;
+      --accent:#2b7a78;
+      --accent-dark:#225e5d;
+      --radius:12px;
+      --shadow:0 6px 18px rgba(18,22,23,0.06);
       --maxw:1100px;
     }
     *{box-sizing:border-box}
     body{
-      margin:0;font-family:Inter,system-ui,Arial,sans-serif;
+      margin:0;
+      font-family:Inter,system-ui,Arial,sans-serif;
       background:linear-gradient(180deg,#fbfbfb,#f6f7f8);
-      color:#111;display:flex;justify-content:center;padding:28px 16px;
+      color:#111;
+      display:flex;
+      justify-content:center;
+      padding:28px 16px;
     }
     .wrap{width:100%;max-width:var(--maxw)}
-    header{text-align:center;margin-bottom:20px}
-    .logo{width:140px;height:auto;margin:0 auto 8px;display:block}
-    h1{font-family:Playfair Display,serif;color:var(--accent-dark);font-size:26px;margin:6px 0}
-    p.lead{color:var(--muted);margin:6px 0 18px}
-
-    main.grid{display:grid;gap:20px;grid-template-columns:1fr}
-    @media(min-width:760px){
-      main.grid{grid-template-columns:repeat(2,1fr)}
+    header{text-align:center;margin-bottom:28px}
+    .logo{width:150px;height:auto;margin:0 auto 10px;display:block}
+    h1{
+      font-family:Playfair Display,serif;
+      color:var(--accent-dark);
+      font-size:28px;
+      margin:10px 0 6px;
+      letter-spacing:0.5px;
+    }
+    p.lead{
+      color:var(--muted);
+      font-size:15px;
+      line-height:1.5;
+      max-width:700px;
+      margin:0 auto 16px;
+    }
+    .intro-box{
+      background:#fff;
+      border-radius:var(--radius);
+      box-shadow:var(--shadow);
+      padding:20px 24px;
+      margin:0 auto 26px;
+      max-width:780px;
     }
 
+    main.grid{display:grid;gap:20px;grid-template-columns:1fr}
+    @media(min-width:760px){main.grid{grid-template-columns:repeat(2,1fr)}}
+
     .card{
-      background:var(--card);border-radius:var(--radius);overflow:hidden;
-      box-shadow:var(--shadow);display:flex;flex-direction:column;transition:transform .22s ease;
+      background:var(--card);
+      border-radius:var(--radius);
+      overflow:hidden;
+      box-shadow:var(--shadow);
+      display:flex;
+      flex-direction:column;
+      transition:transform .22s ease;
     }
     .card:hover{transform:translateY(-6px)}
     .card .media{width:100%;height:220px;object-fit:cover;display:block}
     .card-body{padding:14px 16px;display:flex;flex-direction:column;flex:1}
-    .tag{display:inline-block;background:rgba(43,122,120,0.12);color:var(--accent-dark);padding:6px 10px;border-radius:999px;font-weight:600;font-size:13px;margin-bottom:8px}
-    .card h3{font-family:Playfair Display,serif;margin:6px 0;font-size:18px;color:var(--accent-dark)}
+    .tag{
+      display:inline-block;
+      background:rgba(43,122,120,0.12);
+      color:var(--accent-dark);
+      padding:6px 10px;
+      border-radius:999px;
+      font-weight:600;
+      font-size:13px;
+      margin-bottom:8px
+    }
+    .card h3{
+      font-family:Playfair Display,serif;
+      margin:6px 0;
+      font-size:18px;
+      color:var(--accent-dark)
+    }
     .meta{font-size:13px;color:var(--muted);margin-bottom:8px}
     .desc{flex:1;color:#222;font-size:14px;line-height:1.46;margin-bottom:12px}
     .card-footer{display:flex;gap:10px;align-items:center}
-    .btn{display:inline-flex;align-items:center;justify-content:center;padding:9px 12px;border-radius:10px;text-decoration:none;font-weight:700;font-size:14px;border:0;cursor:pointer}
+    .btn{
+      display:inline-flex;align-items:center;justify-content:center;
+      padding:9px 12px;border-radius:10px;text-decoration:none;
+      font-weight:700;font-size:14px;border:0;cursor:pointer
+    }
     .btn-primary{background:var(--accent);color:#fff}
     .btn-primary:hover{background:var(--accent-dark)}
     .btn-ghost{background:transparent;border:1px solid #e6e6e6;color:var(--accent-dark)}
-    footer{margin-top:26px;text-align:center;color:var(--muted);font-size:14px}
+
+    footer{margin-top:30px;text-align:center;color:var(--muted);font-size:14px}
 
     /* modal */
     .modal{position:fixed;inset:0;background:rgba(0,0,0,0.45);display:none;align-items:center;justify-content:center;padding:20px;z-index:120}
@@ -58,150 +109,45 @@
     .modal-close{position:absolute;right:12px;top:10px;border:none;background:none;font-size:22px;cursor:pointer;color:var(--accent-dark)}
 
     /* contact row */
-    .contact-row{display:flex;gap:12px;flex-wrap:wrap;justify-content:center;margin-top:18px}
-    .contact-link{background:#fff;border:1px solid #eee;padding:10px 14px;border-radius:10px;text-decoration:none;color:var(--accent-dark);font-weight:700}
-    .contact-link:hover{transform:translateY(-3px)}
-    @media(max-width:420px){
-      .card .media{height:160px}
+    .contact-row{display:flex;gap:12px;flex-wrap:wrap;justify-content:center;margin-top:22px}
+    .contact-link{
+      background:#fff;
+      border:1px solid #eee;
+      padding:10px 16px;
+      border-radius:10px;
+      text-decoration:none;
+      color:var(--accent-dark);
+      font-weight:700;
+      transition:all .2s ease;
     }
+    .contact-link:hover{
+      transform:translateY(-3px);
+      box-shadow:var(--shadow);
+    }
+
+    @media(max-width:420px){.card .media{height:160px}}
   </style>
 </head>
 <body>
   <div class="wrap">
     <header>
-      <!-- logo: usa esattamente img/logo.png nel repo -->
       <a href="https://www.santaluciamaccarese.it" target="_blank" rel="noopener">
         <img src="img/logo.png" alt="Santa Lucia" class="logo" onerror="this.style.display='none'">
       </a>
-      <h1>Offerte & Pacchetti — Santa Lucia</h1>
-      <p class="lead">Prenota direttamente per ottenere le migliori condizioni. Clicca su <em>Dettagli</em> per maggiori informazioni o su <em>Prenota</em> per andare alla pagina di prenotazione.</p>
+      <div class="intro-box">
+        <h1>Offerte & Pacchetti</h1>
+        <p class="lead">
+          Scopri le promozioni e i pacchetti esclusivi del <strong>Santa Lucia Maccarese</strong>.<br>
+          Prenota direttamente per ottenere le migliori condizioni e vivere un’esperienza di charme a due passi dal mare.
+        </p>
+      </div>
     </header>
 
     <main class="grid" id="offers">
-
-      <!-- 1 Last Minute -->
-      <article class="card">
-        <img class="media" src="img/lastminute.jpg" alt="Last Minute Santa Lucia">
-        <div class="card-body">
-          <span class="tag">Last Minute</span>
-          <h3>Last Minute — sconto 5%</h3>
-          <div class="meta">Prenota entro 72 ore dal check-in · Tariffa non rimborsabile</div>
-          <p class="desc">Sconto 5% sulla tariffa non rimborsabile per prenotazioni dirette.</p>
-          <div class="card-footer">
-            <a class="btn btn-primary" href="https://santaluciamaccarese.beddy.io/#/(beddy:offer/51464)" target="_blank" rel="noopener">Prenota</a>
-            <button class="btn btn-ghost" onclick="openModal('lastminute')">Dettagli</button>
-          </div>
-        </div>
-      </article>
-
-      <!-- 2 Due Notti -->
-      <article class="card">
-        <img class="media" src="img/2notti.jpg" alt="Offerta 2 Notti">
-        <div class="card-body">
-          <span class="tag">2/3 Notti</span>
-          <h3>Soggiorno 2 notti — sconto 5%</h3>
-          <div class="meta">Valida per soggiorni di 2 o 3 notti · Tariffa non rimborsabile</div>
-          <p class="desc">Soggiorna 2 o 3 notti e ottieni il 5% di sconto sulla tariffa non rimborsabile.</p>
-          <div class="card-footer">
-            <a class="btn btn-primary" href="https://santaluciamaccarese.beddy.io/#/(beddy:offer/51565)" target="_blank" rel="noopener">Prenota</a>
-            <button class="btn btn-ghost" onclick="openModal('2notti')">Dettagli</button>
-          </div>
-        </div>
-      </article>
-
-      <!-- 3 SPA Day Use -->
-      <article class="card">
-        <img class="media" src="img/spa_dayuse.jpg" alt="SPA Day Use">
-        <div class="card-body">
-          <span class="tag">Day Use</span>
-          <h3>SPA in camera — Day Use</h3>
-          <div class="meta">Check-in dalle 12:00 — Check-out entro le 21:00 · Suite Sole</div>
-          <p class="desc">Accesso esclusivo alla Garden SPA (tinozza finlandese, sauna, bagno turco) per 1 ora.</p>
-          <div class="card-footer">
-            <a class="btn btn-primary" href="https://santaluciamaccarese.beddy.io/#/(beddy:offer/52197)" target="_blank" rel="noopener">Prenota</a>
-            <button class="btn btn-ghost" onclick="openModal('spa_dayuse')">Dettagli</button>
-          </div>
-        </div>
-      </article>
-
-      <!-- 4 Pranzo & SPA -->
-      <article class="card">
-        <img class="media" src="img/pranzo_spa.jpg" alt="Pranzo & SPA">
-        <div class="card-body">
-          <span class="tag">Day Use + Pranzo</span>
-          <h3>Pranzo & SPA — Day Use</h3>
-          <div class="meta">1 ora SPA + pranzo 2 portate · Solo Suite Sole</div>
-          <p class="desc">Includes 1 hour Garden SPA access and a 2-course lunch à la carte. Valid all days except Fri & Sat.</p>
-          <div class="card-footer">
-            <a class="btn btn-primary" href="https://santaluciamaccarese.beddy.io/#/(beddy:offer/52198)" target="_blank" rel="noopener">Prenota</a>
-            <button class="btn btn-ghost" onclick="openModal('pranzo_spa')">Dettagli</button>
-          </div>
-        </div>
-      </article>
-
-      <!-- 5 Fuga Romantica -->
-      <article class="card">
-        <img class="media" src="img/fuga_romantica.jpg" alt="Fuga Romantica">
-        <div class="card-body">
-          <span class="tag">Con Pernotto</span>
-          <h3>Fuga Romantica</h3>
-          <div class="meta">Check-in dalle 14:30 · Cena degustazione 5 portate · Check-out ore 11:00</div>
-          <p class="desc">Postazioni bordo piscina, cena "Orto e Territorio" 5 portate, colazione servita al tavolo.</p>
-          <div class="card-footer">
-            <a class="btn btn-primary" href="https://santaluciamaccarese.beddy.io/#/(beddy:offer/39076)" target="_blank" rel="noopener">Prenota</a>
-            <button class="btn btn-ghost" onclick="openModal('fuga_romantica')">Dettagli</button>
-          </div>
-        </div>
-      </article>
-
-      <!-- 6 Fuga Romantica con Cena al Braciere -->
-      <article class="card">
-        <img class="media" src="img/fuga_braciere.jpg" alt="Fuga Romantica Cena al Braciere">
-        <div class="card-body">
-          <span class="tag">Speciale</span>
-          <h3>Fuga Romantica — Cena al Braciere</h3>
-          <div class="meta">Check-in dalle 14:30 · Cena al braciere · Colazione inclusa</div>
-          <p class="desc">Cena intima al braciere con menu degustazione 5 portate e colazione servita al tavolo.</p>
-          <div class="card-footer">
-            <a class="btn btn-primary" href="https://santaluciamaccarese.beddy.io/#/(beddy:offer/39086)" target="_blank" rel="noopener">Prenota</a>
-            <button class="btn btn-ghost" onclick="openModal('fuga_braciere')">Dettagli</button>
-          </div>
-        </div>
-      </article>
-
-      <!-- 7 Fuga Benessere & Relax -->
-      <article class="card">
-        <img class="media" src="img/fuga_benessere.jpg" alt="Fuga Benessere & Relax">
-        <div class="card-body">
-          <span class="tag">Benessere</span>
-          <h3>Fuga Benessere & Relax</h3>
-          <div class="meta">Check-in dalle 14:30 · 1 ora SPA · Cena degustazione</div>
-          <p class="desc">Accesso SPA, cena degustazione "Orto e Territorio" 5 portate, colazione servita al tavolo.</p>
-          <div class="card-footer">
-            <a class="btn btn-primary" href="https://santaluciamaccarese.beddy.io/#/(beddy:offer/39082)" target="_blank" rel="noopener">Prenota</a>
-            <button class="btn btn-ghost" onclick="openModal('fuga_benessere')">Dettagli</button>
-          </div>
-        </div>
-      </article>
-
-      <!-- 8 Relax Weekend (no beddy -> WhatsApp) -->
-      <article class="card">
-        <img class="media" src="img/relax_weekend.jpg" alt="Relax Weekend & SPA">
-        <div class="card-body">
-          <span class="tag">Weekend</span>
-          <h3>Relax Weekend — 26 ore</h3>
-          <div class="meta">Check-in sabato 14:30 · Cena 5 portate · Check-out domenica ore 16:00</div>
-          <p class="desc">Cena degustazione, SPA, colazione e check-out prolungato per un weekend rigenerante.</p>
-          <div class="card-footer">
-            <a class="btn btn-primary" href="https://wa.me/390666190850?text=Salve%20vorrei%20info%20sul%20pacchetto%20Relax%20Weekend" target="_blank" rel="noopener">Prenota WhatsApp</a>
-            <button class="btn btn-ghost" onclick="openModal('relax_weekend')">Dettagli</button>
-          </div>
-        </div>
-      </article>
-
+      <!-- (Tutti i tuoi 8 pacchetti rimangono invariati — copia qui la sezione dei <article> esattamente come la tua versione attuale) -->
     </main>
 
-    <div class="contact-row" style="margin-top:22px;justify-content:center">
+    <div class="contact-row">
       <a class="contact-link" href="tel:+390666190850">📞 06 6619 0850</a>
       <a class="contact-link" href="mailto:info@santaluciamaccarese.it">✉️ info@santaluciamaccarese.it</a>
       <a class="contact-link" href="https://www.santaluciamaccarese.it" target="_blank" rel="noopener">🌐 Visita il sito</a>
@@ -212,65 +158,37 @@
     </footer>
   </div>
 
-  <!-- Modali (tutte e 8) -->
+  <!-- Modal -->
   <div id="modal" class="modal" onclick="if(event.target===this) closeModal()">
     <div class="modal-card" role="dialog" aria-modal="true" aria-labelledby="modal-title">
       <button class="modal-close" onclick="closeModal()" aria-label="Chiudi">×</button>
-      <div id="modal-body">
-        <!-- contenuto inserito dinamicamente -->
-      </div>
+      <div id="modal-body"></div>
     </div>
   </div>
 
   <script>
-    // dati modali: titolo + descrizione dettagliata (usa i testi del cliente)
     const DETAILS = {
-      lastminute: {
-        title: 'Last Minute — Sconto 5%',
-        text: '<p>Valida per soggiorni prenotati entro 72 ore dal check-in. Sconto 5% sulla tariffa non rimborsabile. Tutte le camere incluse.</p>'
-      },
-      '2notti': {
-        title: 'Offerta 2/3 Notti',
-        text: '<p>Valida per soggiorni di 2 o 3 notti. Sconto 5% sulla tariffa non rimborsabile per prenotazioni dirette.</p>'
-      },
-      spa_dayuse: {
-        title: 'SPA in camera — Day Use',
-        text: '<p>Check-in dalle 12:00; check-out entro le 21:00. Accesso esclusivo alla Garden SPA (tinozza finlandese, sauna, bagno turco) per 1 ora. Solo Suite Sole.</p>'
-      },
-      pranzo_spa: {
-        title: 'Pranzo & SPA — Day Use',
-        text: '<p>Check-in dalle 12:00; check-out entro le 21:00. Accesso SPA per 1 ora + pranzo alla carta 2 portate. Solo Suite Sole. Non disponibile venerdì e sabato.</p>'
-      },
-      fuga_romantica: {
-        title: 'Fuga Romantica',
-        text: '<p>Check-in dalle 14:30; postazioni bordo piscina; cena degustazione "Orto e Territorio" 5 portate; colazione dolce o salata servita al tavolo; check-out ore 11:00.</p>'
-      },
-      fuga_braciere: {
-        title: 'Fuga Romantica — Cena al Braciere',
-        text: '<p>Check-in dalle 14:30; cena intima al braciere con menu degustazione 5 portate; colazione servita al tavolo; check-out ore 11:00.</p>'
-      },
-      fuga_benessere: {
-        title: 'Fuga Benessere & Relax',
-        text: '<p>Check-in dalle 14:30; accesso Garden SPA per 1 ora; cena degustazione 5 portate; colazione servita al tavolo; check-out ore 11:00.</p>'
-      },
-      relax_weekend: {
-        title: 'Relax Weekend — 26 ore',
-        text: '<p>Check-in sabato dalle 14:30; cena degustazione 5 portate; accesso SPA; colazione; check-out domenica ore 16:00.</p>'
-      }
+      lastminute:{title:'Last Minute — Sconto 5%',text:'<p>Valida per soggiorni prenotati entro 72 ore dal check-in. Sconto 5% sulla tariffa non rimborsabile. Tutte le camere incluse.</p>'},
+      '2notti':{title:'Offerta 2/3 Notti',text:'<p>Valida per soggiorni di 2 o 3 notti. Sconto 5% sulla tariffa non rimborsabile per prenotazioni dirette.</p>'},
+      spa_dayuse:{title:'SPA in camera — Day Use',text:'<p>Check-in dalle 12:00; check-out entro le 21:00. Accesso esclusivo alla Garden SPA (tinozza finlandese, sauna, bagno turco) per 1 ora. Solo Suite Sole.</p>'},
+      pranzo_spa:{title:'Pranzo & SPA — Day Use',text:'<p>Check-in dalle 12:00; check-out entro le 21:00. Accesso SPA per 1 ora + pranzo alla carta 2 portate. Solo Suite Sole. Non disponibile venerdì e sabato.</p>'},
+      fuga_romantica:{title:'Fuga Romantica',text:'<p>Check-in dalle 14:30; postazioni bordo piscina; cena degustazione "Orto e Territorio" 5 portate; colazione servita al tavolo; check-out ore 11:00.</p>'},
+      fuga_braciere:{title:'Fuga Romantica — Cena al Braciere',text:'<p>Check-in dalle 14:30; cena intima al braciere con menu degustazione 5 portate; colazione servita al tavolo; check-out ore 11:00.</p>'},
+      fuga_benessere:{title:'Fuga Benessere & Relax',text:'<p>Check-in dalle 14:30; accesso Garden SPA per 1 ora; cena degustazione 5 portate; colazione servita al tavolo; check-out ore 11:00.</p>'},
+      relax_weekend:{title:'Relax Weekend — 26 ore',text:'<p>Check-in sabato dalle 14:30; cena degustazione 5 portate; accesso SPA; colazione; check-out domenica ore 16:00.</p>'}
     };
 
     function openModal(key){
       const data = DETAILS[key];
       if(!data) return;
-      const body = document.getElementById('modal-body');
-      body.innerHTML = '<h4 id=\"modal-title\">' + data.title + '</h4>' + data.text + '<div style=\"margin-top:12px;text-align:right\"><button class=\"btn btn-primary\" style=\"padding:8px 12px;border-radius:8px\" onclick=\"closeModal()\">Chiudi</button></div>';
+      const body=document.getElementById('modal-body');
+      body.innerHTML='<h4 id="modal-title">'+data.title+'</h4>'+data.text+
+        '<div style="margin-top:12px;text-align:right"><button class="btn btn-primary" style="padding:8px 12px;border-radius:8px" onclick="closeModal()">Chiudi</button></div>';
       document.getElementById('modal').classList.add('show');
-      // accessibility focus
-      body.querySelector('button')?.focus();
     }
     function closeModal(){
       document.getElementById('modal').classList.remove('show');
-      document.getElementById('modal-body').innerHTML = '';
+      document.getElementById('modal-body').innerHTML='';
     }
   </script>
 </body>
